--- a/blocks/header.css
+++ b/blocks/header.css
@@ -9,3 +9,27 @@
   height: 33px;
   fill: #fff;
 }
+
+@media screen and (max-width: 320px) {
+  .header {
+    margin-top: 28px;
+  }
+
+  .header__logo {
+    margin: 0 0 32px 27px;
+    width: 126px;
+    height: 24px;
+  }
+}
+
+@media screen and (min-width: 320px) and (max-width: 580px) {
+  .header {
+    margin-top: 28px;
+  }
+
+  .header__logo {
+    margin: 0 0 32px 27px;
+    width: 126px;
+    height: 24px;
+  }
+}
