--- a/blocks/page.css
+++ b/blocks/page.css
@@ -17,3 +17,9 @@
   display: flex;
   flex-direction: column;
 }
+
+@media screen and (min-width: 580px) and (max-width: 880px) {
+  .page__section {
+    max-width: 775px;
+  }
+}
