--- a/blocks/profile.css
+++ b/blocks/profile.css
@@ -70,3 +70,81 @@
 .profile__add:hover {
   opacity: 0.6;
 }
+
+@media screen and (max-width: 320px) {
+  .profile {
+    padding-top: 42px;
+    max-width: 282px;
+    flex-direction: column;
+  }
+
+  .profile__avatar {
+    margin: 0 0 26px 0;
+  }
+
+  .profile__info {
+    margin: 0;
+    padding: 0 15px 0 43px;
+  }
+
+  .profile__name {
+    padding-bottom: 14px;
+    font-size: 22px;
+    line-height: 1.21;
+  }
+
+  .profile__edit {
+    margin: 0 0 14px 10px;
+    width: 18px;
+    height: 18px;
+  }
+
+  .profile__description {
+    margin: 0 auto;
+    font-size: 14px;
+  }
+
+  .profile__add {
+    margin: 0 auto;
+    width: 282px;
+  }
+}
+
+@media screen and (min-width: 320px) and (max-width: 580px) {
+  .profile {
+    padding-top: 42px;
+    max-width: 282px;
+    flex-direction: column;
+  }
+
+  .profile__avatar {
+    margin: 0 0 26px 0;
+  }
+
+  .profile__info {
+    margin: 0;
+    padding: 0 15px 0 43px;
+  }
+
+  .profile__name {
+    padding-bottom: 14px;
+    font-size: 22px;
+    line-height: 1.21;
+  }
+
+  .profile__edit {
+    margin: 0 0 14px 10px;
+    width: 18px;
+    height: 18px;
+  }
+
+  .profile__description {
+    margin: 0 auto;
+    font-size: 14px;
+  }
+
+  .profile__add {
+    margin: 0 auto;
+    width: 282px;
+  }
+}
