--- a/blocks/card.css
+++ b/blocks/card.css
@@ -6,8 +6,7 @@
 }
 
 .card__image {
-  width: 282px;
-  height: 282px;
+  object-fit: cover;
 }
 
 .card__description {
@@ -19,6 +18,7 @@
 }
 
 .card__text {
+  margin: 0;
   font-size: 24px;
   font-weight: 900;
   line-height: 1.21;
@@ -38,4 +38,5 @@
 .card__like:hover {
   background: transparent url(../images/like-active.svg) center no-repeat;
   opacity: 0.5;
+  cursor: pointer;
 }
