--- a/blocks/page.css
+++ b/blocks/page.css
@@ -1,6 +1,6 @@
 .page {
   margin: 0;
-  font-family: Inter;
+  font-family: Inter, Arial, sans-serif;
   color: #fff;
   background-color: #000;
 }
@@ -18,8 +18,14 @@
   flex-direction: column;
 }
 
-@media screen and (min-width: 580px) and (max-width: 880px) {
+@media screen and (min-width: 580px) and (max-width: 720px) {
   .page__section {
-    max-width: 775px;
+    max-width: 720px;
+  }
+}
+
+@media screen and (min-width: 720px) and (max-width: 880px) {
+  .page__section {
+    max-width: 760px;
   }
 }
