--- a/blocks/profile.css
+++ b/blocks/profile.css
@@ -17,7 +17,7 @@
   display: grid;
   grid-template-areas:
     "name edit add"
-    "description description description";
+    "description . .";
   grid-auto-columns: minmax(auto, 375px) auto auto;
 }
 
@@ -69,6 +69,7 @@
 .profile__edit:hover,
 .profile__add:hover {
   opacity: 0.6;
+  cursor: pointer;
 }
 
 @media screen and (max-width: 320px) {
@@ -101,6 +102,7 @@
 
   .profile__description {
     margin: 0 auto;
+    max-width: 206px;
     font-size: 14px;
   }
 
@@ -140,11 +142,19 @@
 
   .profile__description {
     margin: 0 auto;
+    max-width: 206x;
     font-size: 14px;
   }
 
   .profile__add {
     margin: 0 auto;
     width: 282px;
+  }
+}
+
+@media screen and (min-width: 581px) and (max-width: 720px) {
+  .profile__add {
+    margin: 0 auto;
+    width: 50px;
   }
 }
