--- a/blocks/profile.css
+++ b/blocks/profile.css
@@ -152,7 +152,14 @@
   }
 }
 
-@media screen and (min-width: 581px) and (max-width: 720px) {
+@media screen and (min-width: 581px) and (max-width: 620px) {
+  .profile__add {
+    margin: 0 auto 0 10px;
+    width: 50px;
+  }
+}
+
+@media screen and (min-width: 621px) and (max-width: 720px) {
   .profile__add {
     margin: 0 auto;
     width: 50px;
