--- a/blocks/profile.css
+++ b/blocks/profile.css
@@ -152,16 +152,22 @@
   }
 }
 
-@media screen and (min-width: 581px) and (max-width: 620px) {
+@media screen and (min-width: 581px) and (max-width: 640px) {
   .profile__add {
     margin: 0 auto 0 10px;
     width: 50px;
   }
 }
 
-@media screen and (min-width: 621px) and (max-width: 720px) {
+@media screen and (min-width: 641px) and (max-width: 720px) {
   .profile__add {
     margin: 0 auto;
     width: 50px;
+  }
+}
+
+@media screen and (min-width: 721px) and (max-width: 740px) {
+  .profile__add {
+    margin: 0 auto 0 10px;
   }
 }
