--- a/blocks/card.css
+++ b/blocks/card.css
@@ -20,7 +20,9 @@
 }
 
 .card__text {
+  padding: 0;
   margin: 0;
+  width: 215px;
   font-size: 24px;
   font-weight: 900;
   line-height: 1.21;
@@ -30,15 +32,20 @@
 }
 
 .card__like {
-  width: 22px;
+  margin: 0;
+  padding: 0;
+  width: 20px;
   height: 18px;
   background: transparent url(../images/like-inactive.svg) center no-repeat;
   fill: #000;
   border: 0;
 }
 
+.card__like_active {
+  background-image: url(../images/like-active.svg);
+}
+
 .card__like:hover {
-  background: transparent url(../images/like-active.svg) center no-repeat;
   opacity: 0.5;
   cursor: pointer;
 }
