--- a/blocks/card.css
+++ b/blocks/card.css
@@ -3,12 +3,34 @@
   flex-direction: column;
   border-radius: 10px;
   overflow: hidden;
+  position: relative;
+}
+
+.card__delete {
+  width: 18px;
+  height: 19px;
+  z-index: 1;
+  background: transparent url(../images/delete-icon.svg) center no-repeat;
+  position: absolute;
+  top: 18px;
+  right: 15px;
+  fill: #fff;
+  border: 0;
+}
+
+.card__delete:hover {
+  opacity: 0.6;
+  cursor: pointer;
 }
 
 .card__image {
   width: 282px;
   height: 282px;
   object-fit: cover;
+}
+
+.card__image:hover {
+  cursor: pointer;
 }
 
 .card__description {
