--- a/blocks/footer.css
+++ b/blocks/footer.css
@@ -11,18 +11,8 @@
   color: #545454;
 }
 
-@media screen and (max-width: 320px) {
-  .footer {
-    max-width: 282px;
-    margin: 48px auto 36px;
-  }
-
-  .footer__copyright {
-    font-size: 14px;
-  }
-}
-
-@media screen and (min-width: 320px) and (max-width: 580px) {
+@media screen and (max-width: 580px) and (min-width: 321px),
+  (max-width: 320px) {
   .footer {
     max-width: 282px;
     margin: 48px auto 36px;
