--- a/blocks/location.css
+++ b/blocks/location.css
@@ -13,17 +13,8 @@
   grid-gap: 20px 17px;
 }
 
-@media screen and (max-width: 320px) {
-  .location {
-    margin-top: 36px;
-  }
-
-  .location__cards {
-    grid-gap: 20px 19px;
-  }
-}
-
-@media screen and (min-width: 320px) and (max-width: 580px) {
+@media screen and (max-width: 580px) and (min-width: 321px),
+  (max-width: 320px) {
   .location {
     margin-top: 36px;
   }
