--- a/blocks/modal.css
+++ b/blocks/modal.css
@@ -79,11 +79,29 @@
 .modal__input {
   padding: 0 0 13px;
   font-size: 14px;
+  width: 100%;
   font-weight: 400;
   line-height: 1.21;
   color: #000;
   border: none;
   border-bottom: 1px solid rgba(0, 0, 0, 0.2);
+}
+
+.modal__input_error {
+  border-bottom: 1px solid #f00;
+}
+
+.modal__error {
+  padding: 0;
+  margin: 0;
+  font-size: 12px;
+  font-weight: 400;
+  line-height: 1.21;
+  color: #f00;
+}
+
+.modal__error_visible {
+  border-bottom: 1px solid #f00;
 }
 
 .modal__save {
@@ -98,6 +116,19 @@
   text-align: center;
   border: none;
 }
+
+/* .modal__save_disabled {
+  padding: 0;
+  margin-top: 18px;
+  height: 50px;
+  background-color: #fff;
+  font-size: 18px;
+  font-weight: 400;
+  line-height: 1.21;
+  color: #000;
+  text-align: center;
+  border: 1px solid #000;
+} */
 
 .modal__save:hover {
   opacity: 0.8;
