--- a/blocks/modal.css
+++ b/blocks/modal.css
@@ -76,6 +76,10 @@
   row-gap: 30px;
 }
 
+.modal__label {
+  position: relative;
+}
+
 .modal__input {
   padding: 0 0 13px;
   font-size: 14px;
@@ -92,16 +96,18 @@
 }
 
 .modal__error {
-  padding: 0;
-  margin: 0;
   font-size: 12px;
   font-weight: 400;
   line-height: 1.21;
   color: #f00;
+  display: absolute;
+  top: calc(100% + 15px);
+  left: 0;
+  opacity: 0;
 }
 
 .modal__error_visible {
-  border-bottom: 1px solid #f00;
+  opacity: 1;
 }
 
 .modal__save {
@@ -117,18 +123,20 @@
   border: none;
 }
 
-/* .modal__save_disabled {
+.modal__save_disabled {
   padding: 0;
   margin-top: 18px;
   height: 50px;
-  background-color: #fff;
+  background-color: #f6f6f6;
   font-size: 18px;
   font-weight: 400;
   line-height: 1.21;
   color: #000;
   text-align: center;
   border: 1px solid #000;
-} */
+  opacity: 0.2;
+  cursor: not-allowed;
+}
 
 .modal__save:hover {
   opacity: 0.8;
