--- a/src/blocks/modal.css
+++ b/src/blocks/modal.css
@@ -76,6 +76,7 @@
   display: flex;
   flex-direction: column;
   row-gap: 30px;
+  min-height: 200px;
 }
 
 .modal__label {
@@ -102,7 +103,7 @@
   font-weight: 400;
   line-height: 1.21;
   color: #f00;
-  display: absolute;
+  position: absolute;
   top: calc(100% + 15px);
   left: 0;
   opacity: 0;
